--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -1,27 +1,43 @@
 ---
 kind: internal
 events:
+    'CHAOSScon EU 2025':
+        location: Brussels, Belgium
+        start: 2025-01-30
+        end: 2025-01-30
+        cost: $10
+        registration: required
+        website: https://chaoss.community/chaosscon-2025-eu/
+        contact: elizabeth@chaoss.community
+    'DuckCon #6':
+        location: Amsterdam, The Netherlands
+        start: 2025-01-31
+        end: 2025-01-31
+        cost: free
+        registration: required
+        website: https://duckdb.org/2025/01/31/duckcon6
+        contact: gabor@duckdb.org
+    'Workshop on FOSS license and security compliance tools':
+        location: Brussels, Belgium
+        start: 2024-01-31
+        end: 2024-01-31
+        cost: €0 - €100
+        registration: recommended
+        website: https://pretix.eu/aboutcode/fosdem-2025/
+        contact: hello@aboutcode.org
     'Config Management Camp 2025':
         location: Ghent, Belgium
         start: 2025-02-03
         end: 2025-02-05
-        cost: Free
-        registration: Preregistration required for Crowd control purposes
+        cost: free
+        registration: required
         website: https://cfgmgmtcamp.org
         contact: info@cfgmgmtcamp.org
-    'DuckCon #6':
-        location: Amsterdam
-        start: 2025-01-31
-        end: 2025-01-31
-        cost: free
-        registration: registration is required
-        website: https://duckdb.org/2025/01/31/duckcon6
-        contact: gabor@duckdb.org
-    'CHAOSScon EU 2025':
-        location: Bedford Hotel & Congress Centre, Rue du Midi 135, Brussels, 1000, Belgium
-        start: 2025-01-30
-        end: 2025-01-30
-        cost: $10
-        registration: registration is required
-        website: https://chaoss.community/chaosscon-2025-eu/
-        contact: elizabeth@chaoss.community
+    'OpenEmbedded Workshop 2025':
+        location: Brussels, Belgium
+        start: 2025-02-03
+        end: 2025-02-03
+        cost: €75
+        registration: required
+        website: https://pretalx.com/openembedded-workshop-2025/
+        contact: philip@balister.org
