--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -26,6 +26,7 @@ stand_list:
                 - name: Meshtastic
                 - name: Infostand on amateur radio
   - name: F (level 0)
+    map: map_f
     groups:
       - info:
           building: F
@@ -180,6 +181,7 @@ stand_list:
                 - name: Matrix.org Foundation
                 - name: Realtime Lounge
   - name: UA (level 0)
+    map: map_ua
     groups:
       - info:
           building: UA
