--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -25,7 +25,7 @@ stand_list:
                 - name: GNU Radio
                 - name: Meshtastic
                 - name: Infostand on amateur radio
-  - name: F (level 0)
+  - name: F (level 2)
     map: map_f
     groups:
       - info:
@@ -75,7 +75,7 @@ stand_list:
       - info:
           building: J
           floor: 1
-          groop: 106
+          groop: A
           amount: 1
         stands:
           - theme:
@@ -180,7 +180,7 @@ stand_list:
                 - name: Linphone
                 - name: Matrix.org Foundation
                 - name: Realtime Lounge
-  - name: UA (level 0)
+  - name: UA (level 2)
     map: map_ua
     groups:
       - info:
