stands amendment: switch day for immich and mattermost

--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -176,7 +176,7 @@ stand_list:
           - theme:
             stands:
               all:
-                - name: Immich (SAT) - Mattermost (SUN)
+                - name: Mattermost (SAT) - Immich (SUN)
                 - name: Linphone
                 - name: Matrix.org Foundation
                 - name: Realtime Lounge
