Remove Alpha Channel when generating Sponsor Logos
This fixes the LMAX Group logo, as the white sections at the top were
showing as all black.

--- a/sponsors-src/Makefile
+++ b/sponsors-src/Makefile
@@ -15,10 +15,10 @@ define template
 	ln "$$<" "$$@"
 
 $(DST)/%-big.png: %-big.$(1)
-	convert -density 1000 "$$<" -background '#ffffff' -flatten -bordercolor white -border 1 -trim -resize 12000@ "$$@"
+	convert -density 1000 "$$<" -background '#ffffff' -flatten -alpha remove -bordercolor white -border 1 -trim -resize 12000@ "$$@"
 
 $(DST)/%-small.png: %-small.$(1)
-	convert -density 1000 "$$<" -background '#ffffff' -flatten -bordercolor white -border 1 -trim -resize 2500@ "$$@"
+	convert -density 1000 "$$<" -background '#ffffff' -flatten -alpha remove -bordercolor white -border 1 -trim -resize 2500@ "$$@"
 endef
 
 $(foreach EXT,$(EXTS),$(eval $(call template,$(EXT))))
