--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -10,43 +10,43 @@ stand_list:
           group: A
           amount: 12
         stands:
-          - theme: Hardware
-            stands:
-              all:
-                - name: OpenFlexure Microscope
-                - name: KiCAD + FreeCAD
-                - name: Framework Computer
-                - name: RISC-V International
-                - name: OpenPrinting
-          - theme: IoT
-            stands:
-              all:
-                - name: Dronecode Foundation + The Zephyr Project
-                - name: openHAB
-                - name: OpenRemote
-                - name: TinyGo, Mechanoid & WasmVision
-                - name: wolfSSL
-          - theme: Developer environment
-            stands:
-              all:
-                - name: GNU Radio
-          - theme: HAM Radio
-            stands:
-              all:
-                - name: Infostand on amateur radio
+        - theme: Hardware
+          stands:
+            all:
+              - name: OpenFlexure Microscope
+              - name: KiCAD + FreeCAD
+              - name: Framework Computer
+              - name: RISC-V International
+              - name: OpenPrinting
+        - theme: IoT
+          stands:
+            all:
+              - name: Dronecode Foundation + The Zephyr Project
+              - name: openHAB
+              - name: OpenRemote
+              - name: TinyGo, Mechanoid & WasmVision
+              - name: wolfSSL
+        - theme: Developer environment
+          stands:
+            all:
+              - name: GNU Radio
+        - theme: HAM Radio
+          stands:
+            all:
+              - name: Infostand on amateur radio
       - info:
           building: AW
           floor: 1
           group: AW1124
           amount: 4
         stands:
-          - theme: Instant Messaging
-            stands:
-              all:
-                - name: Delta Chat (Sunday)
-                - name: Linphone
-                - name: The Matrix.org Foundation
-                - name: XMPP & Realtime Lounge
+        - theme: Instant Messaging
+          stands:
+            all:
+              - name: Delta Chat (Sunday)
+              - name: Linphone
+              - name: The Matrix.org Foundation
+              - name: XMPP & Realtime Lounge
   - name: F
     map: map_f
     groups:
@@ -56,29 +56,29 @@ stand_list:
           group: A
           amount: 11
         stands:
-          - theme: Office suites and productivity
-            stands:
-              all:
-                - name: CiviCRM
-                - name: Dolibar ERP CRM + Odoo Community Association (OCA)
-                - name: LibreOffice
-          - theme: Community advocacy
-            stands:
-              all:
-                - name: Mastodon
-          - theme: Office suites and productivity
-            stands:
-              all:
-                - name: Nextcloud
-                - name: Mozilla
-                - name: Thunderbird
-                - name: SOGo Webmail
-                - name: Joplin
-                - Weblate
-          - theme: World wide web
-            stands:
-              all:
-                - name: ISRG (Let's Encrypt, Prossimo, Divvi Up)
+        - theme: Office suites and productivity
+          stands:
+            all:
+              - name: CiviCRM
+              - name: Dolibar ERP CRM + Odoo Community Association (OCA)
+              - name: LibreOffice
+        - theme: Community advocacy
+          stands:
+            all:
+              - name: Mastodon
+        - theme: Office suites and productivity
+          stands:
+            all:
+              - name: Nextcloud
+              - name: Mozilla
+              - name: Thunderbird
+              - name: SOGo Webmail
+              - name: Joplin
+              - name: Weblate
+        - theme: World wide web
+          stands:
+            all:
+              - name: ISRG (Let's Encrypt, Prossimo, Divvi Up)
   - name: H
     map: map_h
     groups:
@@ -88,26 +88,26 @@ stand_list:
           group: A
           amount: 14
         stands:
-          - theme: Operating Systems
-            stands:
-              all:
-                - name: BSD + FreeBSD Project
-                - name: Debian
-                - name: Ubuntu Community booth
-                - name: OpenMandriva
-                - name: Rocky Linux
-                - name: Fedora Project
-                - name: Nix and NixOS
-                - name: Gentoo Linux
-                - name: openSUSE Project
-                - name: Qubes OS + Genode OS
-                - name: T2 SDE Linux
-                - name: XCP-ng and Xen Orchestra
-                - name: Xen Project
-          - theme: World wide web
-            stands:
-              all:
-                - name: Digital Public Goods
+        - theme: Operating Systems
+          stands:
+            all:
+              - name: BSD + FreeBSD Project
+              - name: Debian
+              - name: Ubuntu Community booth
+              - name: OpenMandriva
+              - name: Rocky Linux
+              - name: Fedora Project
+              - name: Nix and NixOS
+              - name: Gentoo Linux
+              - name: openSUSE Project
+              - name: Qubes OS + Genode OS
+              - name: T2 SDE Linux
+              - name: XCP-ng and Xen Orchestra
+              - name: Xen Project
+        - theme: World wide web
+          stands:
+            all:
+              - name: Digital Public Goods
   - name: K (level 1)
     map: map_k_1
     groups:
@@ -117,76 +117,76 @@ stand_list:
           group: A
           amount: 11
         stands:
-          - theme: Education
-            stands:
-              all:
-                - name: Open Source at CERN
-          - theme: Developer environment
-            stands:
-              all:
-                - name: Homebrew
-                - name: Jenkins
-                - name: GitLab
-                - name: Codeberg and Forgejo
-          - theme: Monitoring and Observability
-            stands:
-              all:
-                - name: Grafana
-                - name: Checkmk
-          - theme: Programming languages
-            stands:
-              all:
-                - name: Python & Django
-                - name: the Perl & Raku Foundation
-                - name: Kotlin Community Stand
-                - name: Kiwi TCMS (SAT)
-          - theme: Hardware
-            stands:
-              all:
-                - name: PINE64 Community (SUN)
+        - theme: Education
+          stands:
+            all:
+              - name: Open Source at CERN
+        - theme: Developer environment
+          stands:
+            all:
+              - name: Homebrew
+              - name: Jenkins
+              - name: GitLab
+              - name: Codeberg and Forgejo
+        - theme: Monitoring and Observability
+          stands:
+            all:
+              - name: Grafana
+              - name: Checkmk
+        - theme: Programming languages
+          stands:
+            all:
+              - name: Python & Django
+              - name: the Perl & Raku Foundation
+              - name: Kotlin Community Stand
+              - name: Kiwi TCMS (SAT)
+        - theme: Hardware
+          stands:
+            all:
+              - name: PINE64 Community (SUN)
       - info:
           building: K
           floor: 1
           group: B
           amount: 8
         stands:
-          - theme: Database engines
-            stands:
-              all:
-                - name: MariaDB Server
-                - name: Percona
-                - name: MySQL
-                - name: PostgreSQL
-          - theme: World wide web
-            stands:
-              all:
-                - name: MapLibre
-                - name: Tor, Tails, NoScript
-          - theme: System administration
-            stands:
-              all:
-                - name: Proxmox VE
-                - name: metal-stack
+        - theme: Database engines
+          stands:
+            all:
+              - name: MariaDB Server
+              - name: Percona
+              - name: MySQL
+              - name: PostgreSQL
+        - theme: World wide web
+          stands:
+            all:
+              - name: MapLibre
+              - name: Tor, Tails, NoScript
+        - theme: System administration
+          stands:
+            all:
+              - name: Proxmox VE
+              - name: metal-stack
       - info:
           building: K
           floor: 1
           group: C
           amount: 8
         stands:
-          - theme: Multimedia and graphics
-            stands:
-              all:
-                - name: VideoLAN
-          - theme: 
-            stands:
-              all:
-                - name: Sovereign Identity for server, desktop, and a cloud Keycloak, FreeIPA, SSSD, OpenWallet (SAT) - Sovereign Tech Agency (SUN)
-                - name: privacyIDEA
-                - name: Computer networks with BIRD, KNOT and Turris
-                - name: Wireshark
-                - name: OpenTofu & OpenBao
-                - name: OpenNebula
-                - name: Foreman
+        - theme: Multimedia and graphics
+          stands:
+            all:
+              - name: VideoLAN
+        - theme: 
+          stands:
+            all:
+              - name: Sovereign Identity for server, desktop, and a cloud Keycloak, FreeIPA, SSSD, OpenWallet (SAT) - Sovereign Tech Agency (SUN)
+              - name: privacyIDEA
+              - name: Computer networks with BIRD, KNOT and Turris
+              - name: Wireshark
+              - name: OpenTofu & OpenBao
+              - name: OpenNebula
+              - name: Foreman
   - name: K (level 2)
     map: map_k_2
     groups:
@@ -196,48 +196,48 @@ stand_list:
           group: A
           amount: 16
         stands:
-          - theme: Community advocacy
-            stands:
-              all:
-                - name: ASF Community
-                - name: Cloud Native Computing Foundation + OpenInfra & the Linux Foundation
-                - name: Linux Foundation Europe + Open Source Security Foundation
-                - name: Eclipse Foundation
-                - name: KAIYUANSHE (China Open Source Alliance)
-                - name: FOSSASIA
-                - name: Open Culture Foundation + Taiwan Open Source community
-                - name: FOSS United + fundingjson (and FLOSS/fund)
-                - name: Free Software Foundation Europe
-                - name: Software Freedom Conservancy
-          - theme: World wide web
-            stands:
-              all:
-                - name: Internet Archive Europe (SAT)
-          - theme: Community advocacy
-            stands:
-              all:
-                - name: Software Heritage (SUN)
-                - name: Google Summer of Code
-                - name: Open-Source Firmware Foundation
-                - name: OpenSSL Foundation
-                - name: OpenAgri Software Services
-                - name: Hex sticker booth by NLnet Foundation
+        - theme: Community advocacy
+          stands:
+            all:
+              - name: ASF Community
+              - name: Cloud Native Computing Foundation + OpenInfra & the Linux Foundation
+              - name: Linux Foundation Europe + Open Source Security Foundation
+              - name: Eclipse Foundation
+              - name: KAIYUANSHE (China Open Source Alliance)
+              - name: FOSSASIA
+              - name: Open Culture Foundation + Taiwan Open Source community
+              - name: FOSS United + fundingjson (and FLOSS/fund)
+              - name: Free Software Foundation Europe
+              - name: Software Freedom Conservancy
+        - theme: World wide web
+          stands:
+            all:
+              - name: Internet Archive Europe (SAT)
+        - theme: Community advocacy
+          stands:
+            all:
+              - name: Software Heritage (SUN)
+              - name: Google Summer of Code
+              - name: Open-Source Firmware Foundation
+              - name: OpenSSL Foundation
+              - name: OpenAgri Software Services
+              - name: Hex sticker booth by NLnet Foundation
       - info:
           building: K
           floor: 2
           group: B
           amount: 4
         stands:
-          - theme: Desktop environments
-            stands:
-              all:
-                - name: GNOME
-                - name: KDE
-          - theme: Gaming 
-            stands:
-              all:
-                - name: Firefly Zero
-                - name: Luanti (formerly Minetest)
+        - theme: Desktop environments
+          stands:
+            all:
+              - name: GNOME
+              - name: KDE
+        - theme: Gaming 
+          stands:
+            all:
+              - name: Firefly Zero
+              - name: Luanti (formerly Minetest)
   - name: UD2
     map: map_ud
     groups:
@@ -247,11 +247,11 @@ stand_list:
           group: A
           amount: 5
         stands:
-          - theme: Mobile Operating System
-            stands:
-              all:
-                - name: F-Droid and /e/OS + OW2 FOSS community / Murena degooglized phones and suite
-                - name: Free Android World - From Hardware to Apps - An Open, Sustainable Ecosystem (BlissLabs, IzzyOnDroid & SHIFTphone)
-                - name: postmarketOS
-                - name: Linux on Mobile
-                - name: Furi Labs
+        - theme: Mobile Operating System
+          stands:
+            all:
+              - name: F-Droid and /e/OS + OW2 FOSS community / Murena degooglized phones and suite
+              - name: Free Android World - From Hardware to Apps - An Open, Sustainable Ecosystem (BlissLabs, IzzyOnDroid & SHIFTphone)
+              - name: postmarketOS
+              - name: Linux on Mobile
+              - name: Furi Labs
