implement .well-known/assetlinks.json - implements  #318 for https://github.com/EventFahrplan/EventFahrplan
Signed-off-by: Sebastian Schubert <basti@schubert.digital>

--- a/config.yaml
+++ b/config.yaml
@@ -114,6 +114,9 @@ data_sources:
     # it will become “/about.html/” instead.
     allow_periods_in_identifiers: false
 
+    extra_files:
+      - ".well-known/**/*"
+
   -
     type: schedule
 
