--- a/Rules
+++ b/Rules
@@ -331,6 +331,10 @@ route '/404/' do
   "/404.html"
 end
 
+route '/.well-known/assetlinks/' do
+  "/.well-known/assetlinks.json"
+end
+
 # send this one into oblivion, its compiled content is included in
 # layouts/default.html, but is not to be rendered as a file of its
 # own into output
