feat: enable single-event calendar files
Enable a given event to also generate the appropriate ics/xcs files at
the desired routes.

Resolves #313
Resolves #335

Signed-off-by: Mike Fiedler <miketheman@gmail.com>

--- a/Rules
+++ b/Rules
@@ -376,6 +376,12 @@ end
 route '/schedule/ical/track/*' do
   "#{$prefix}/schedule/track/#{item.identifier.split('/')[-1]}.ics"
 end
+route '/schedule/xcal/event/*' do
+  "#{$prefix}/schedule/event/#{item.identifier.split('/')[-1]}.xcs"
+end
+route '/schedule/ical/event/*' do
+  "#{$prefix}/schedule/event/#{item.identifier.split('/')[-1]}.ics"
+end
 route '/schedule/pentabarf/' do
   "#{$prefix}/schedule/xml"
 end
